# DiscoDottler

./: .gitignore  CMakeLists.txt  main.cpp
src/: tables.hpp
src/data/: abilities.hpp  discodottledata.hpp  items.hpp  moves.hpp  nature.hpp  species.hpp
src/string_conversions/: from_string.hpp  s_ability.cpp  s_ability.hpp  s_item.cpp  s_item.hpp  s_moves.cpp  s_moves.hpp  s_nature.cpp  s_nature.hpp  s_species.cpp  s_species.hpp  string_conversions.cpp  string_conversions.hpp
src/tables/: create.hpp
